identity layout uniform with main app layout

--- a/Zdk/Server/wwwroot/css/site.css
+++ b/Zdk/Server/wwwroot/css/site.css
@@ -1,83 +1,120 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification\
-for details on configuring this project to bundle and minify static web assets. */
+﻿@import url('openiconic/font/css/open-iconic-bootstrap.min.css');
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
-a {
-  color: #0077cc;
+.page {
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
-.form-control:focus {
-    border-color: #0077cc;
-    box-shadow: 0 0 0 0.2rem #0077cc;
+main {
+    flex: 1;
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.sidebar {
+    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
 }
 
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+.navbar-toggler {
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
-.btn-link.nav-link:focus {
-  outline: black auto 1px;
+.top-row {
+    height: 3.5rem;
+    background-color: rgba(0,0,0,0.4);
 }
 
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.container {
-  max-width: 960px;
+.bottom-row {
+    height: 3.5rem;
+    background-color: rgba(0,0,0,0.4);
+    width: 100%;
+    position: absolute;
+    bottom: 0;
 }
 
-.pricing-header {
-  max-width: 700px;
+    .bottom-row > div {
+        width: 100%;
+    }
+
+.navbar-toggler-lg {
+    float: right;
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+.navbar-brand {
+    font-size: 1.1rem;
 }
 
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+.oi {
+    width: 2rem;
+    font-size: 1.1rem;
+    vertical-align: text-top;
+    top: -2px;
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+.navlink-text {
+    display: block;
+    transition: .5s;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+.nav-item {
+    font-size: 0.9rem;
+    padding-bottom: 0.5rem;
 }
 
-body {
-  margin-bottom: 60px;
+.nav-item:first-of-type { 
+    padding-top: 1rem;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  overflow: scroll;
-  white-space: nowrap;
-  line-height: 60px;
+
+.nav-item:last-of-type {
+    padding-bottom: 1rem;
+}
+
+.nav-item a {
+    color: #d7d7d7;
+    border-radius: 4px;
+    height: 3rem;
+    display: flex;
+    align-items: center;
+    line-height: 3rem;
+}
+
+    .nav-item a.active {
+        background-color: rgba(255,255,255,0.25);
+        color: white;
+    }
+
+    .nav-item a:hover {
+        background-color: rgba(255,255,255,0.1);
+        color: white;
+    }
+
+@media (max-width: 640.98px) {
+    .navbar-toggler-lg {
+        display: none;
+    }
+
+    .navbar-toggler-sm {
+        display: flex;
+    }
+}
+
+@media (min-width: 641px) {
+    .page {
+        flex-direction: row;
+    }
+
+    .sidebar {
+        width: 250px;
+        height: 100vh;
+        position: sticky;
+        top: 0;
+        transition: .5s;
+    }
+
+    .navbar-toggler-lg {
+        display: block;
+    }
+
+    .navbar-toggler-sm {
+        display: none;
+    }
 }
