--- a/Zdk/Server/Pages/Shared/_Layout.cshtml
+++ b/Zdk/Server/Pages/Shared/_Layout.cshtml
@@ -2,71 +2,81 @@
 @using Microsoft.AspNetCore.Mvc.ViewEngines
 @inject IWebHostEnvironment Environment
 @inject ICompositeViewEngine Engine
+
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Zdk.Server</title>
+    <title>@ViewData["Title"] - Zdk</title>
 
     <environment include="Development">
-        <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="~/Identity/css/site.css" />
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
               integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous"
-              asp-fallback-href="~/Identity/lib/bootstrap/dist/css/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
-        <link rel="stylesheet" href="~/Identity/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     </environment>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" href="~/">Zdk.Server</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+    <partial name="_CookieConsentPartial" optional />
+    <div class="page">
+        <div id="navbar" class="sidebar">
+            <div class="top-row ps-3 navbar navbar-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="">Zdk</a>
+                    <button title="Navigation menu" class="navbar-toggler navbar-toggler-sm" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    @{
-                        var result = Engine.FindView(ViewContext, "_LoginPartial", isMainPage: false);
-                    }
-                    @if (result.Success)
-                    {
-                        await Html.RenderPartialAsync("_LoginPartial");
-                    }
-                    else
-                    {
-                        throw new InvalidOperationException("The default Identity UI layout requires a partial view '_LoginPartial' " +
-                            "usually located at '/Pages/_LoginPartial' or at '/Views/Shared/_LoginPartial' to work. Based on your configuration " +
-                            $"we have looked at it in the following locations: {System.Environment.NewLine}{string.Join(System.Environment.NewLine, result.SearchedLocations)}.");
-                    }
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                 </div>
             </div>
-        </nav>
-    </header>
 
-    <div class="container">
-        <partial name="_CookieConsentPartial" optional />
+            <div class="navbar-collapse collapse show">
+                <nav class="flex-column">
+                    <div class="nav-item px-3">
+                        <a class="nav-link" href="" Match="NavLinkMatch.All">
+                            <span class="oi oi-home" aria-hidden="true"></span> <span class="navlink-text">Home</span>
+                        </a>
+                    </div>
+                    <div class="nav-item px-3">
+                        <a class="nav-link" href="ShoppingLists">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> <span class="navlink-text">Shopping lists</span>
+                        </a>
+                    </div>
+                    <div class="nav-item px-3">
+                        <a class="nav-link" href="User">
+                            <span class="oi oi-cog" aria-hidden="true"></span> <span class="navlink-text">User management</span>
+                        </a>
+                    </div>
+                    <partial name="_LoginPartial" />
+                </nav>
+            </div>
+
+            <div class="bottom-row ps-3 navbar navbar-dark">
+                <div class="container-fluid">
+                    <button id="navbar-toggler-lg" class="navbar-toggler navbar-toggler-lg" type="button" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+            </div>
+        </div>
+
         <main role="main" class="pb-1">
-            @RenderBody()
+            <article class="content px-4">
+                @RenderBody()
+            </article>
+            @*<footer class="footer border-top pl-3 text-muted">
+                <div class="container">
+                    &copy; 2021 - Zdk.Server
+                </div>
+            </footer>*@
         </main>
     </div>
-    <footer class="footer border-top pl-3 text-muted">
-        <div class="container">
-        &copy; 2021 - Zdk.Server
-            @{
-                var foundPrivacy = Url.Page("/Privacy", new { area = "" });
-            }
-            @if (foundPrivacy != null)
-            {
-                <a asp-area="" asp-page="/Privacy">Privacy</a>
-            }
-        </div>
-    </footer>
 
     <environment include="Development">
         <script src="~/Identity/lib/jquery/dist/jquery.js"></script>
@@ -88,6 +98,41 @@
         </script>
         <script src="~/Identity/js/site.js" asp-append-version="true"></script>
     </environment>
+
+    <script>
+        const btn = document.getElementById("navbar-toggler-lg");
+        const navbar = document.getElementById("navbar");
+
+        navbar.style.width = "250px";
+        btn.onclick = toggleNav;
+
+        function toggleNav(t, ev) {
+            if (navbar.style.width === "250px") {
+                closeNav();
+
+            } else {
+                openNav();
+            }
+        }
+
+        function openNav() {
+            navbar.style.width = "250px";
+            let texts = document.getElementsByClassName("navlink-text");
+
+            for (let i = 0; i < texts.length; i++) {
+                texts[i].style.display = "flex";
+            }
+        }
+
+        function closeNav() {
+            navbar.style.width = "120px";
+            let texts = document.getElementsByClassName("navlink-text");
+
+            for (let i = 0; i < texts.length; i++) {
+                texts[i].style.display = "none";
+            }
+        }
+    </script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
