--- a/Zdk/Server/Pages/Shared/_LoginPartial.cshtml
+++ b/Zdk/Server/Pages/Shared/_LoginPartial.cshtml
@@ -4,25 +4,29 @@
 @inject SignInManager<ZdkUser> SignInManager
 @inject UserManager<ZdkUser> UserManager
 
-<ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li class="nav-item">
+    <div class="nav-item px-3">
+        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            <span class="oi oi-person" aria-hidden="true"></span> @UserManager.GetUserName(User)!
+        </a>
+    </div>
+    <div class="nav-item px-3">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <span class="oi oi-account-logout" aria-hidden="true"></span> <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
-    </li>
+    </div>
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    <div class="nav-item px-3">
+        <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">
+            <span class="oi oi-key" aria-hidden="true"></span> <span class="navlink-text">Register</span>
+        </a>
+    </div>
+    <div class="nav-item px-3">
+        <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">
+            <span class="oi oi-account-login" aria-hidden="true"></span> <span class="navlink-text">Login</span>
+        </a>
+    </div>
 }
-</ul>
