--- a/Zdk/Client/Shared/MainLayout.razor.css
+++ b/Zdk/Client/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgb(5, 20, 100) 0%, #000000 70%);
 }
 
 .top-row {
@@ -60,6 +60,8 @@ main {
         height: 100vh;
         position: sticky;
         top: 0;
+        font-size: larger;
+        transition: .5s;
     }
 
     .top-row {
