--- a/Zdk/Server/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Zdk/Server/Areas/Identity/Pages/Account/Logout.cshtml
@@ -10,7 +10,8 @@
         if (User.Identity.IsAuthenticated)
         {
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
+                <p>Are you sure you want to logout?</p>
+                <button type="submit" class="nav-link btn btn-link text-dark">Yes</button>
             </form>
         }
         else
