--- a/Zdk/Server/Pages/Shared/_LoginPartial.cshtml
+++ b/Zdk/Server/Pages/Shared/_LoginPartial.cshtml
@@ -7,26 +7,26 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <div class="nav-item px-3">
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-            <span class="oi oi-person" aria-hidden="true"></span> @UserManager.GetUserName(User)!
+        <a class="nav-link" id="manage" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
+            <span class="oi oi-person nav-item-icon" aria-hidden="true"></span> <span class="navlink-text">@UserManager.GetUserName(User)</span>
         </a>
     </div>
     <div class="nav-item px-3">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-            <span class="oi oi-account-logout" aria-hidden="true"></span> <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-        </form>
+        <a class="nav-link" id="logout" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
+            <span class="oi oi-account-logout nav-item-icon" aria-hidden="true"></span> <span class="navlink-text">Logout</span>
+        </a>
     </div>
 }
 else
 {
     <div class="nav-item px-3">
         <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">
-            <span class="oi oi-key" aria-hidden="true"></span> <span class="navlink-text">Register</span>
+            <span class="oi oi-key nav-item-icon" aria-hidden="true"></span> <span class="navlink-text">Register</span>
         </a>
     </div>
     <div class="nav-item px-3">
         <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">
-            <span class="oi oi-account-login" aria-hidden="true"></span> <span class="navlink-text">Log in</span>
+            <span class="oi oi-account-login nav-item-icon" aria-hidden="true"></span> <span class="navlink-text">Log in</span>
         </a>
     </div>
 }
