--- a/Zdk/Client/Components/ShoppingLists/ShoppingListsComponent.razor
+++ b/Zdk/Client/Components/ShoppingLists/ShoppingListsComponent.razor
@@ -1,4 +1,8 @@
-﻿<TableComponent Items="ShoppingLists">
+@namespace Zdk.Client
+
+@inherits ZComponentBase
+
+<TableComponent Items="ShoppingLists">
     <TableHeader>
         <th style="text-align: left;">Name</th>
         <th style="width: 10%;"></th>
