--- a/Zdk/Client/Components/ShoppingLists/UsersComponent.razor
+++ b/Zdk/Client/Components/ShoppingLists/UsersComponent.razor
@@ -1,4 +1,8 @@
-﻿<table style="width: 100%; max-height: 80vh; margin: auto;">
+﻿@namespace Zdk.Client
+
+@inherits ZComponentBase
+
+<table style="width: 100%; max-height: 80vh; margin: auto;">
     <tbody>
         @foreach (var u in Users)
         {
