--- a/Zdk/Client/Components/TableComponent.razor
+++ b/Zdk/Client/Components/TableComponent.razor
@@ -1,4 +1,8 @@
-﻿@typeparam TItem
+﻿@namespace Zdk.Client
+
+@inherits ZComponentBase
+
+@typeparam TItem
 
 <table class="table" style="text-align: center;">
     <thead>
