--- a/Zdk/Client/Shared/LoginDisplay.razor
+++ b/Zdk/Client/Shared/LoginDisplay.razor
@@ -1,4 +1,6 @@
-﻿@using Microsoft.AspNetCore.Components.Authorization
+﻿@namespace Zdk.Client
+
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 
 @inject NavigationManager Navigation
