--- a/Zdk/Client/Shared/MainLayout.razor
+++ b/Zdk/Client/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inherits LayoutComponentBase
+﻿@namespace Zdk.Client
+
+@inherits LayoutComponentBase
 
 <div class="page">
     <div id="navbar" class="sidebar">
