--- a/Zdk/Client/Pages/Authentication.razor
+++ b/Zdk/Client/Pages/Authentication.razor
@@ -1,7 +1,11 @@
-﻿@page "/authentication/{action}"
+﻿@namespace Zdk.Client
+
+@page "/authentication/{action}"
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-<RemoteAuthenticatorView Action="@Action" />
+
+<AuthenticatorView Action="@Action" />
 
 @code{
-    [Parameter] public string Action { get; set; }
+    [Parameter] 
+    public string Action { get; set; }
 }
