--- a/Zdk/Client/Pages/Index.razor
+++ b/Zdk/Client/Pages/Index.razor
@@ -1,4 +1,7 @@
 ﻿@page "/"
+
+@namespace Zdk.Client
+
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.SignalR.Client
