--- a/Zdk/Client/Shared/NavMenu.razor
+++ b/Zdk/Client/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@namespace Zdk.Client
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a id="brand-name" class="navbar-brand" href="">Zdk</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
