--- a/Zdk/Client/Shared/RedirectToLogin.razor
+++ b/Zdk/Client/Shared/RedirectToLogin.razor
@@ -1,5 +1,7 @@
-﻿@inject NavigationManager Navigation
+﻿@namespace Zdk.Client
+@inject NavigationManager Navigation
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+
 @code {
     protected override void OnInitialized()
     {
