--- a/Zdk/Client/_Imports.razor
+++ b/Zdk/Client/_Imports.razor
@@ -1,4 +1,6 @@
-﻿@using System.Net
+﻿@namespace Zdk.Client
+
+@using System.Net
 @using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Authorization
@@ -11,9 +13,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Zdk.Client
-@using Zdk.Client.Components
-@using Zdk.Client.Components.ShoppingLists
-@using Zdk.Client.Shared
 @using Zdk.Shared
 @using Zdk.Shared.Constants
 @using Zdk.Shared.Models
