--- a/Zdk/Client/App.razor
+++ b/Zdk/Client/App.razor
@@ -3,18 +3,19 @@
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
         <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-                <NotAuthorized>
-                    @if (!context.User.Identity.IsAuthenticated)
-                    {
-                        <RedirectToLogin />
-                    }
-                    else
-                    {
-                        <p>You are not authorized to access this resource.</p>
-                    }
-                </NotAuthorized>
-            </AuthorizeRouteView>
+            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            @* <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"> *@
+                @* <NotAuthorized> *@
+                @*     @if (!context.User.Identity.IsAuthenticated) *@
+                @*     { *@
+                @*         <RedirectToLogin /> *@
+                @*     } *@
+                @*     else *@
+                @*     { *@
+                @*         <p>You are not authorized to access this resource.</p> *@
+                @*     } *@
+                @* </NotAuthorized> *@
+            @* </AuthorizeRouteView> *@
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(MainLayout)">
