--- a/Zdk/Client/Pages/ShoppingLists.razor
+++ b/Zdk/Client/Pages/ShoppingLists.razor
@@ -2,31 +2,26 @@
 
 @namespace Zdk.Client
 
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
-@using Microsoft.AspNetCore.SignalR.Client
 @inject HttpClient Http
-@* @inject AuthenticationStateProvider AuthenticationStateProvider *@
-@* @inject NavigationManager NavigationManager *@
 
-@implements IAsyncDisposable
 @inherits AuthenticatedBase
+@implements IAsyncDisposable
 
-<h3 @onclick="() => shoppingList = null">Shopping lists</h3>
+<h3 @onclick="() => _shoppingList = null">Shopping lists</h3>
 
-@if (groups is not null)
+@if (_groups is not null)
 {
-    <GroupSelect Groups="groups" @bind-Group="sessionGroup" OnChanged="ChangeGroup" />
+    <GroupSelect Groups="_groups" @bind-Group="SessionGroup" OnChanged="ChangeGroup" />
 }
 
-@if (shoppingList is not null)
+@if (_shoppingList is not null)
 {
-    <button @onclick="() => shoppingList = null">Go back</button>
-    <ItemsComponent @bind-ShoppingList="shoppingList" @bind-NewItem="newItem" Update="UpdateItem" Delete="DeleteItem" OnSubmit="SendItem" />
+    <button @onclick="() => _shoppingList = null">Go back</button>
+    <ItemsComponent @bind-ShoppingList="_shoppingList" @bind-NewItem="_newItem" Update="UpdateItem" Delete="DeleteItem" OnSubmit="SendItem" />
 }
-else if (shoppingLists is not null)
+else if (_shoppingLists is not null)
 {
-    <ShoppingListsComponent ShoppingLists="shoppingLists" @bind-ShoppingList="shoppingList" @bind-NewShoppingList="newShoppingList" Delete="DeleteList" OnSubmit="SendList" />
+    <ShoppingListsComponent ShoppingLists="_shoppingLists" @bind-ShoppingList="_shoppingList" @bind-NewShoppingList="_newShoppingList" Delete="DeleteList" OnSubmit="SendList" />
 }
 else
 {
@@ -34,70 +29,79 @@ else
 }
 
 @code {
-    private List<Group> groups;
-    private List<ShoppingList> shoppingLists;
-    private ShoppingList? shoppingList;
-    private ShoppingList newShoppingList = new();
-    private UserSession session;
-    private Item newItem = new();
-    private HubConnection? shoppingListHubConnection;
-    private HubConnection? userHubConnection;
+    private List<Group>? _groups;
+    private List<ShoppingList> _shoppingLists = new List<ShoppingList>();
+    private ShoppingList? _shoppingList;
+    private ShoppingList _newShoppingList = new();
+    private UserSession? _session;
+    private Item _newItem = new();
+    private HubConnection? _shoppingListHubConnection;
+    private HubConnection? _userHubConnection;
 
-    private int sessionGroup
+    private List<ShoppingList> _listsToSend = new List<ShoppingList>();
+    private List<Item> _itemsToSend = new List<Item>();
+
+    private int SessionGroup
     {
-        get => session.GroupId;
+        get => _session.GroupId;
         set
         {
-            session.GroupId = value;
+            _session.GroupId = value;
         }
     }
 
-    public bool IsConnectedSL =>
-        shoppingListHubConnection?.State == HubConnectionState.Connected;
+    private bool IsConnectedSl =>
+        _shoppingListHubConnection != null &&
+        _shoppingListHubConnection.State == HubConnectionState.Connected;
 
-    public bool IsConnectedU =>
-        userHubConnection?.State == HubConnectionState.Connected;
+    private bool IsConnectedU =>
+        _userHubConnection != null &&
+        _userHubConnection.State == HubConnectionState.Connected;
 
-    protected override async Task OnInitializedAsync()
+    protected override async Task OnParametersSetAsync()
     {
+        await base.OnParametersSetAsync();
+
         try
         {
-            shoppingListHubConnection = new HubConnectionBuilder()
-                .WithUrl(NavigationManager.ToAbsoluteUri("/shoppinglistshub"))
+            _shoppingListHubConnection = new HubConnectionBuilder()
+                .WithUrl(NavigationManager.ToAbsoluteUri($"/{ShoppingListsHubMethodNames.HubName}"))
                 .WithAutomaticReconnect()
                 .Build();
 
-            shoppingListHubConnection.On<List<ShoppingList>>(ShoppingListsHubMethodNames.ReceiveData, (list) =>
+            _shoppingListHubConnection.On<List<ShoppingList>>(ShoppingListsHubMethodNames.ReceiveData, (list) =>
             {
-                shoppingLists = list;
+                _shoppingLists = list;
 
-                if (shoppingList is not null)
+                if (_shoppingList is not null)
                 {
-                    shoppingList = shoppingLists.Find(e => e.ShoppingListId == shoppingList.ShoppingListId) ?? null;
+                    _shoppingList = _shoppingLists.Find(e => e.ShoppingListId == _shoppingList.ShoppingListId) ?? null;
                 }
                 Console.WriteLine($"Received lists");
 
                 StateHasChanged();
             });
 
-            await shoppingListHubConnection.StartAsync();
+            _shoppingListHubConnection.Reconnected += ShoppingListHubConnectionOnReconnected;
 
-            userHubConnection = new HubConnectionBuilder()
-                .WithUrl(NavigationManager.ToAbsoluteUri("/userhub"))
+            await _shoppingListHubConnection.StartAsync();
+
+            _userHubConnection = new HubConnectionBuilder()
+                .WithUrl(NavigationManager.ToAbsoluteUri($"/{UserManagementHubMethodNames.HubName}"))
                 .WithAutomaticReconnect()
                 .Build();
 
-            userHubConnection.On<List<Group>>(UserManagementHubMethodNames.GetGroups, (list) =>
+            _userHubConnection.On<List<Group>>(UserManagementHubMethodNames.GetGroups, (list) =>
             {
-                groups = list;
+                _groups = list;
                 Console.WriteLine($"Received groups");
 
                 StateHasChanged();
             });
 
-            userHubConnection.On<UserSession>(UserManagementHubMethodNames.GetUserSession, async (s) =>
+            _userHubConnection.On<UserSession>(UserManagementHubMethodNames.GetUserSession, async (s) =>
             {
-                session = s;
+                _session = s;
                 await JoinClientGroup();
 
                 await GetLists();
@@ -105,9 +109,9 @@ else
                 StateHasChanged();
             });
 
-            await userHubConnection.StartAsync();
+            await _userHubConnection.StartAsync();
 
-            newItem.Amount = 1;
+            _newItem.Amount = 1;
         }
         catch (AccessTokenNotAvailableException exception)
         {
@@ -117,9 +121,15 @@ else
         {
             if (exception.StatusCode == HttpStatusCode.Unauthorized)
             {
-                NavigationManager.NavigateTo($"authentication/login?returnUrl={Uri.EscapeDataString(NavigationManager.Uri)}");
+                // NavigationManager.NavigateTo($"authentication/login?returnUrl={Uri.EscapeDataString(NavigationManager.Uri)}");
             }
         }
+    }
+
+    private async Task ShoppingListHubConnectionOnReconnected(string? arg)
+    {
+        await SendLists();
+        await SendItems();
     }
 
     private async Task ChangeGroup(object? value)
@@ -127,117 +137,150 @@ else
         Console.WriteLine($"value is: {value} - type: {value.GetType()}");
         await LeaveClientGroup();
 
-        session.GroupId = Int32.Parse((string)value);
+        _session.GroupId = Int32.Parse((string)value);
 
         await UpdateUserSession();
     }
 
     private async Task GetLists()
     {
-        if (shoppingListHubConnection is not null)
+        if (IsConnectedSl && IsAuthenticated())
         {
-            await shoppingListHubConnection.SendAsync(ShoppingListsHubMethodNames.ListShoppingLists);
+            await _shoppingListHubConnection!.SendAsync(ShoppingListsHubMethodNames.ListShoppingLists);
             Console.WriteLine($"Getting lists");
         }
     }
 
     private async Task SendList()
     {
-        if (shoppingListHubConnection is not null)
-        {
-            newShoppingList.Items = new List<Item>();
-            await shoppingListHubConnection.SendAsync(ShoppingListsHubMethodNames.SendShoppingList, newShoppingList);
+        _newShoppingList.Items = new List<Item>();
+        _listsToSend.Add(_newShoppingList);
 
-            newShoppingList = new();
+        await SendLists();
+
+        if (!IsAuthenticated() || !IsConnectedSl)
+        {
+            _shoppingLists = _listsToSend;
+        }
+
+        _newShoppingList = new ShoppingList();
+    }
+
+    private async Task SendLists()
+    {
+        if (IsConnectedSl && IsAuthenticated())
+        {
+            foreach (var list in _listsToSend)
+            {
+                await _shoppingListHubConnection!.SendAsync(ShoppingListsHubMethodNames.SendShoppingList, list);
+            }
+
+            _listsToSend.Clear();
         }
     }
 
     private async Task SendItem()
     {
-        if (shoppingListHubConnection is not null)
+        _newItem.ShoppingListId = _shoppingList.ShoppingListId;
+
+        _shoppingList.Items.Add(_newItem);
+        _itemsToSend.Add(_newItem);
+
+        await SendItems();
+
+        _newItem = new Item();
+        _newItem.Amount = 1;
+    }
+
+    private async Task SendItems()
+    {
+        if (IsConnectedSl && IsAuthenticated())
         {
-            newItem.ShoppingListId = shoppingList.ShoppingListId;
-
-            await shoppingListHubConnection.SendAsync(ShoppingListsHubMethodNames.SendItem, newItem);
-
-            newItem = new();
-            newItem.Amount = 1;
+            foreach (var item in _itemsToSend)
+            {
+                await _shoppingListHubConnection!.SendAsync(ShoppingListsHubMethodNames.SendItem, item);
+            }
         }
     }
 
     private async Task UpdateList(ShoppingList list)
     {
-        if (shoppingListHubConnection is not null)
+        if (IsConnectedSl && IsAuthenticated())
         {
-            await shoppingListHubConnection.SendAsync(ShoppingListsHubMethodNames.UpdateShoppingList, list);
+            await _shoppingListHubConnection!.SendAsync(ShoppingListsHubMethodNames.UpdateShoppingList, list);
         }
     }
 
     private async Task UpdateItem(Item item)
     {
-        if (shoppingListHubConnection is not null)
+        if (IsConnectedSl && IsAuthenticated())
         {
-            await shoppingListHubConnection.SendAsync(ShoppingListsHubMethodNames.UpdateItem, item);
+            await _shoppingListHubConnection!.SendAsync(ShoppingListsHubMethodNames.UpdateItem, item);
         }
     }
 
     private async Task DeleteList(ShoppingList list)
     {
-        if (shoppingListHubConnection is not null)
+        if (IsConnectedSl && IsAuthenticated())
         {
-            await shoppingListHubConnection.SendAsync(ShoppingListsHubMethodNames.DeleteShoppingList, list);
+            await _shoppingListHubConnection!.SendAsync(ShoppingListsHubMethodNames.DeleteShoppingList, list);
         }
     }
 
     private async Task DeleteItem(Item item)
     {
-        if (shoppingListHubConnection is not null)
+        if (IsConnectedSl && IsAuthenticated())
         {
-            await shoppingListHubConnection.SendAsync(ShoppingListsHubMethodNames.DeleteItem, item);
+            await _shoppingListHubConnection!.SendAsync(ShoppingListsHubMethodNames.DeleteItem, item);
         }
     }
 
     private async Task UpdateUserSession()
     {
-        if (userHubConnection is not null)
+        if (IsConnectedU && IsAuthenticated())
         {
-            await userHubConnection.SendAsync(UserManagementHubMethodNames.UpdateUserSession, session);
+            await _userHubConnection!.SendAsync(UserManagementHubMethodNames.UpdateUserSession, _session);
             Console.WriteLine($"Getting session");
         }
     }
 
     private async Task JoinClientGroup()
     {
-        if (shoppingListHubConnection is not null)
+        if (IsConnectedSl && IsAuthenticated())
         {
-            await shoppingListHubConnection.SendAsync(ClientGroupMethodNames.JoinGroup);
+            await _shoppingListHubConnection!.SendAsync(ClientGroupMethodNames.JoinGroup);
         }
-        
-        if (userHubConnection is not null)
+
+        if (IsConnectedU && IsAuthenticated())
         {
-            await userHubConnection.SendAsync(ClientGroupMethodNames.JoinGroup);
+            await _userHubConnection!.SendAsync(ClientGroupMethodNames.JoinGroup);
         }
     }
 
     private async Task LeaveClientGroup()
     {
-        if (shoppingListHubConnection is not null)
+        if (IsConnectedSl && IsAuthenticated())
         {
-            await shoppingListHubConnection.SendAsync(ClientGroupMethodNames.LeaveGroup, session.GroupId);
+            await _shoppingListHubConnection!.SendAsync(ClientGroupMethodNames.LeaveGroup, _session.GroupId);
         }
 
-        if (userHubConnection is not null)
+        if (IsConnectedU && IsAuthenticated())
         {
-            await userHubConnection.SendAsync(ClientGroupMethodNames.LeaveGroup, session.GroupId);
+            await _userHubConnection!.SendAsync(ClientGroupMethodNames.LeaveGroup, _session.GroupId);
         }
     }
 
     public async ValueTask DisposeAsync()
     {
-        if (shoppingListHubConnection is not null)
+        if (_shoppingListHubConnection is not null)
         {
-            await shoppingListHubConnection.DisposeAsync();
+            _shoppingListHubConnection.Reconnected -= ShoppingListHubConnectionOnReconnected;
+            await _shoppingListHubConnection.DisposeAsync();
+        }
+
+        if (_userHubConnection is not null)
+        {
+            await _userHubConnection.DisposeAsync();
         }
     }
-
 }
