--- a/Zdk/Client/_Imports.razor
+++ b/Zdk/Client/_Imports.razor
@@ -11,6 +11,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.SignalR.Client
 @using Microsoft.JSInterop
 @using Zdk.Client
 @using Zdk.Shared
